--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,17 @@
         "!.next/cache/**",
         "dist/**",
         "storybook-static/**"
+      ],
+      "env": [
+        "SPACE_ID",
+        "CLERK_SECRET_KEY", 
+        "GITHUB_ID",
+        "GITHUB_CLIENT_ID",
+        "GITHUB_SECRET",
+        "GITHUB_ACCESS_TOKEN",
+        "PREVIEW_URL_SECRET",
+        "MONGODB_URI",
+        "MONGODB_DATABASE"
       ]
     },
     "lint": {},
